<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="7dp" >

    <EditText
        android:id="@+id/forenameEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/forename"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/surnameEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/collegeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:text="@string/college"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/collegeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/college_array"
        android:prompt="@string/college" />

    <TextView
        android:id="@+id/departmentEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:text="@string/department"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/departmentSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/durham_departments"
        android:prompt="@string/department" />

    <Button
        android:id="@+id/updatePersonalButton"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:text="@string/regsiter" />

</LinearLayout>