<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="7dp" >

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registerConfirmPasswordEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_confim"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:text="@string/durham_affiliation"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/affiliationSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/durham_affiliation"
        android:prompt="@string/university_affiliation" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:text="@string/college"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/collegeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/college_array"
        android:prompt="@string/college" />

</LinearLayout>