<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textViewEventName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/default_event_name"
        android:textColor="#7E317B"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewEventName"
        android:layout_below="@+id/textViewEventName"
        android:contentDescription="@string/event_image"
        android:src="@drawable/clock" />

    <TextView
        android:id="@+id/textViewEventDescription"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:text="@string/default_description"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textViewEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/default_date" />

</RelativeLayout>