<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/detailsScrollView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/socialNetworkingLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/eventDetailsContainer"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/textViewEventName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/default_event_name"
                android:textColor="#7E317B"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/event_image"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/textViewEventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_date"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewEventDescription"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="18.90"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/default_description"
                android:textStyle="italic"
                android:typeface="serif" />
        </LinearLayout>
    </ScrollView>
    
        <RelativeLayout
        android:id="@+id/socialNetworkingLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="right" >

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/facebook"
            android:drawablePadding="5dp" />

    </RelativeLayout>

</RelativeLayout>